Made pickaxes work on machines
Added particles to ender crafter