@@ -24,6 +24,6 @@ public interface ICombinationPackageRecipeInfo extends IPackageRecipeInfo {
 
 	@Override
 	default List<ItemStack> getOutputs() {
-		return Collections.singletonList(getOutput());
+		return List.of(getOutput());
 	}
 }
